# diplom

./: .env.example  .gitignore  pyproject.toml
app/: run.py
app/api/exceptions/: exceptions.py
app/api/handlers/: equipments.py  orders.py  users.py
app/api/schemas/: equipments.py  orders.py  response.py  users.py
app/core/: config.py
app/database/: database.py
app/database/models/: base.py  equipments.py  orders.py  users.py
app/database/repositories/: equipments.py  orders.py  users.py
app/middlewares/: equipments.py  orders.py  users.py
app/utils/: auth.py  repo.py
